tests/assignment/to_this.lox
class Foo {
  Foo() {
    this = "value";  // error
  }
}

Foo();
